1999-03-19  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (IDL.h): Add rule to autoupdate IDL.h.
	* acinclude.m4 (AC_UPDATE_IF_CHANGED): Don't remove intermediate
	file.  This prevents unnecessary rebuilding of IDL.h.new.
	
1999-03-18  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.4.

	* lexer.l: Handle independent code fragments.

	* IDL.h.new.in (IDLF_CODEFRAGS): New flag; code frags can be used
	independently of XPIDL.

1999-03-09  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.3.

	* util.c (IDL_emit_IDL_type_dcl_pre):
	(IDL_emit_IDL_type_pre):
	(IDL_emit_IDL_native_pre): Emit props.

	* parser.y: Add XPIDL properties for type declarations, native and
	constructed types.

1999-03-08  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.2.

	* util.c (IDL_tree_process_forward_dcls): No longer remove
	unresolved forward declaration nodes.  If IDLF_PEDANTIC isn't
	specified, unresolved forwards will be flagged as warnings instead
	of errors.

	* IDL.h.new.in: Improve hack for GINT64's conversion type until
	glib gets smarter about this.

	(IDLF_PEDANTIC): New parse flag; turns some warnings into errors.

1999-03-06  Andrew T. Veliath  <andrewtv@usa.net>

	* IDL.h.new.in: Change IDLF_RESOLVE_FORWARDS to
	IDLF_IGNORE_FORWARDS.  CORBA 2.2 requires that the interface
	definition be listed in the file, so I would rather that the
	default be stricter to the CORBA 2.2 standard.  If you don't want
	forward declaration resolution, use this flag.

1999-03-04  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.1.

1999-03-03  Andrew T. Veliath  <andrewtv@usa.net>

	* util.c (IDL_tree_optimize): Understand
	IDLF_RESOLVE_FORWARDS. libIDL will only resolve them if told now.

	* IDL.h.new.in (IDLF_RESOLVE_FORWARDS): New flag.

1999-02-23  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.0.

	* Assign many node file and line locations to their identifier.
